--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,61 @@
-version: '3.4'
-
+version: '3.8'
 services:
-  elasticsearch-data:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.0
-    container_name: elasticsearch-data
-    environment:
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - discovery.type=single-node
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-        - esdata1:/usr/share/elasticsearch-data/data
-    ports:
-        - 9200:9200
-
-  parlr-api: 
-    image: krupineg/parlr-api
-    container_name: parlr-api
-    environment:
-    ##                  elastic
-      - parlr_storage_type=elastic
-      - parlr_storage_url=http://elasticsearch-data:9200
-      - parlr_storage_name=parlr
-    ports:
-      - 8080:80
-
-  parlr.client.web:
-    image: krupineg/parlr-web
-    container_name: parlr.client.web
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-      - REACT_APP_parlr_api_random_verb_url=https://localhost:8080/verbs/random
-    ports:
-      - 3000:3000
+    elasticsearch-data:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.11.1
+        container_name: elasticsearch-data
+        environment:
+          - cluster.name=docker-cluster
+          - bootstrap.memory_lock=true
+          - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+          - discovery.type=single-node
+          - JSON_DATA=/usr/share/elasticsearch-data/seed
+        ulimits:
+          memlock:
+            soft: -1
+            hard: -1
+        volumes:
+            - esdata1:/usr/share/elasticsearch-data/data
+        ports:
+            - 9200:9200
+    parlr-api:
+        image: krupineg/parlr-api:latest
+        container_name: parlr-api
+        restart: unless-stopped
+        environment:
+            - ASPNETCORE_URLS=https://+;http://+
+            - ASPNETCORE_HTTPS_PORT=8001
+            - ASPNETCORE_Kestrel__Certificates__Default__Password=${CERT_PASSWORD}
+            - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/parlr.pfx
+            - parlr_storage_type=elastic
+            - parlr_storage_url=http://elasticsearch-data:9200
+            - parlr_storage_name=parlr
+        volumes: 
+            - ${HOME}/.aspnet/https:/https/
+        ports:
+            - 8080:80
+            - 8000:80
+            - 8001:443
+    parlr-web:
+        image: krupineg/parlr-web:latest
+        container_name: parlr-web
+        restart: unless-stopped
+        environment:
+            - CHOKIDAR_USEPOLLING=true
+            - REACT_APP_parlr_api_random_verb_url=https://localhost:8080/verbs/random
+        volumes:
+            - ./Parlr.Client.Web/parlr-web:/usr/src/app
+            - ./Parlr.Client.Web/parlr-web/node_modules:/usr/src/app/node_modules
+        ports:
+            - 3000:3000
+    
+    watchtower:
+        image: containrrr/watchtower
+        container_name: watchtower
+        restart: unless-stopped
+        volumes: 
+          - /var/run/docker.sock:/var/run/docker.sock
+        command: --interval 60 --cleanup true parlr-api iparlr-web
 
 volumes:
-  esdata1:
-    driver: local
+    esdata1:
+        driver: local
