--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,17 +1,15 @@
 server {
     listen 80;
-    server_name localhost
+    server_name parlr.me www.parlr.me
+    server_tokens off;
 
     root /usr/src/app;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    
     location / {
-        proxy_pass http://parlr-web:3000;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # Following is necessary for Websocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        rewrite ^ https://$host$request_uri? permanent;
     }
 }
