--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name parlr.me www.parlr.me
+    server_name parlr.me www.parlr.me;
     server_tokens off;
 
     root /usr/src/app;
@@ -19,7 +19,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl http2;
     
-    server_name parlr.me www.parlr.me
+    server_name parlr.me www.parlr.me;
 #    server_tokens off;
 
 #   root /usr/src/app;
