--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -43,19 +43,19 @@ server {
 #    ssl_stapling_verify on;
 #    resolver 8.8.8.8;
 
-#    location /verbs {
-#        proxy_pass http://parlr-api:8000/verbs;
-#        proxy_set_header X-Real-IP $remote_addr;
-#        proxy_set_header Host $host;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # Following is necessary for Websocket support
-#        proxy_http_version 1.1;
-#        proxy_set_header Upgrade $http_upgrade;
-#        proxy_set_header Connection "upgrade";
-#    }
-
     location / {
         proxy_pass http://parlr-web:3000;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # Following is necessary for Websocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    location /verbs {
+        proxy_pass http://parlr-api:8000/verbs;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
