--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -32,16 +32,16 @@ server {
     ssl_buffer_size 8k;
 
     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
-    ssl_prefer_server_ciphers on;
+#    ssl_prefer_server_ciphers on;
 
-    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+#    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
 
-    ssl_ecdh_curve secp384r1;
-    ssl_session_tickets off;
+#    ssl_ecdh_curve secp384r1;
+#    ssl_session_tickets off;
 
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 8.8.8.8;
+#    ssl_stapling on;
+#    ssl_stapling_verify on;
+#    resolver 8.8.8.8;
 
     location / {
         proxy_pass http://parlr-web:3000;
