--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -20,7 +20,7 @@ server {
     listen [::]:443 ssl http2;
     
     server_name parlr.me www.parlr.me;
-    server_tokens off;
+#    server_tokens off;
 
 #   root /usr/src/app;
     
@@ -29,9 +29,9 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
-    ssl_buffer_size 8k;
+#    ssl_buffer_size 8k;
 
-    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+#    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 #    ssl_prefer_server_ciphers on;
 
 #    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
@@ -42,17 +42,6 @@ server {
 #    ssl_stapling on;
 #    ssl_stapling_verify on;
 #    resolver 8.8.8.8;
-
-    location / {
-        proxy_pass http://parlr-web:3000;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # Following is necessary for Websocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
 
     location /verbs {
         proxy_pass http://parlr-api:80/verbs;
@@ -65,8 +54,19 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
-     location /parlr {
-        proxy_pass http://elasticsearch-data:9200/parlr;
+     location /data {
+        proxy_pass http://elasticsearch-data:9200;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # Following is necessary for Websocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    location / {
+        proxy_pass http://parlr-web:3000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
